--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<main>
 		<section id="login">
 			<div id="imagem">
-				foto
+				<!-- Aqui vai a imagem nas CSS -->
 			</div>
 			<div id="formulario">
 				<h1>Login</h1>
 				<p>Seja Bem-vindo(a) novamente. Faça login para acessar sua conta.</p>
 				<form action="login.php" method="post">
-					
+
 				</form>
 			</div>
 		</section>
