--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>login</title>
+	<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 	<link rel="stylesheet" href="estilos/style.css">
 	<link rel="stylesheet" href="estilos/midea-query.css">
 </head>
@@ -17,8 +18,21 @@
 			<div id="formulario">
 				<h1>Login</h1>
 				<p>Seja Bem-vindo(a) novamente. Faça login para acessar sua conta.</p>
-				<form action="login.php" method="post">
-
+				<form action="login.php" method="post" autocomplete="on">
+					<div class="campo">
+						<i class="material-symbols-outlined">person</i>
+						<input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+						<label for="ilogin">Login</label>
+					</div>
+					<div class="campo">
+						<i class="material-symbols-outlined">vpn_key</i>
+						<input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+						<label for="isenha">Senha</label>
+					</div>
+					<input type="submit" value="Entrar">
+					<a href="esqueci.html">
+						Esqueci a senha <i class="material-symbols-outlined"> mail</i>
+					</a>
 				</form>
 			</div>
 		</section>
